--- a/angular.json
+++ b/angular.json
@@ -30,7 +30,8 @@
             "styles": [
               "./node_modules/primeicons/primeicons.css",
               "./node_modules/primeng/resources/themes/tailwind-light/theme.css",
-              "node_modules/primeng/resources/primeng.min.css",
+              "./node_modules/primeng/resources/primeng.min.css",
+              "./node_modules/primeflex/primeflex.css",
               "src/styles.scss"
             ],
             "scripts": []
